MISC COMMIT
